corrected the layout problem when signed in, corrected color being white and invisible in the navigation dropdown

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -38,6 +38,11 @@ li {
     list-style: none;
 }
 
+#sign-out-button {
+    color: black;
+    font-weight: 700;
+}
+
 /* navigation */
 
 .mobile-nav-toggle {
