--- a/src/components/pages/homepage/intro.styles.css
+++ b/src/components/pages/homepage/intro.styles.css
@@ -51,7 +51,7 @@
 
 #sign-up-button {
     grid-column: 2 / 3;
-    margin-bottom: 5em;
+    margin-bottom: 5.4em;
 }
 
 /* floating animation */
@@ -214,7 +214,7 @@
     }
 
     .circles {
-        height: 781px;
+        height: 798px;
         clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
     }
 }
